--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,11 @@
       integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
       crossorigin="anonymous"
     />
+    <!-- <style>
+      body {
+        overflow-x: hidden;
+      } -->
+    </style>
     <title>MEDICENTER</title>
   </head>
   <body>
